--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^16.8.4",
     "@types/styled-components": "^4.1.15",
     "parcel": "^1.12.3",
+    "prettier": "^1.18.2",
     "typescript": "^3.4.5"
   },
   "dependencies": {
