--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "emotion-theming": "^10.0.10",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "snarkdown": "^1.2.2",
     "tinycolor2": "^1.4.1"
   }
 }
