--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "snarkdown": "^1.2.2",
-    "tinycolor2": "^1.4.1"
+    "tinycolor2": "^1.4.1",
+    "whatwg-fetch": "^3.0.0"
   }
 }
