--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.11",
     "emotion-theming": "^10.0.10",
+    "promise-polyfill": "^8.1.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "snarkdown": "^1.2.2",
