--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^11.13.8",
+    "@types/ramda": "^0.26.33",
     "@types/react": "^16.8.15",
     "@types/react-dom": "^16.8.4",
     "@types/tinycolor2": "^1.4.2",
@@ -32,6 +33,7 @@
     "@emotion/styled": "^10.0.11",
     "emotion-theming": "^10.0.10",
     "promise-polyfill": "^8.1.3",
+    "ramda": "^0.26.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "snarkdown": "^1.2.2",
