--- a/package.json
+++ b/package.json
@@ -1,43 +1,18 @@
 {
   "name": "nlx-chat-sdk",
-  "version": "0.3.0",
+  "version": "0.1.0",
   "description": "SDK to talk to NLX bots",
   "main": "lib/index.js",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "start:simple": "parcel examples/simple.html",
-    "start:with-react": "parcel examples/with-react.html",
-    "start:widget": "parcel examples/widget.html",
-    "build:package": "rm -rf lib && mkdir lib && tsc && mv lib/src/* lib && rm -rf lib/examples lib/src",
-    "build:standalone": "node bin/build.js",
-    "build": "npm run build:package && npm run build:standalone",
-    "prepublish": "npm run build"
+    "build": "lerna run build",
+    "publish": "lerna publish"
   },
   "author": "Peter Szerzo <peter@nlx.ai>",
   "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^11.15.11",
-    "@types/ramda": "^0.26.44",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
-    "@types/tinycolor2": "^1.4.2",
-    "aliasify": "^2.1.0",
-    "browserify": "^16.5.1",
-    "parcel": "^1.12.4",
-    "prettier": "^1.19.1",
-    "tsify": "^4.0.1",
-    "typescript": "^3.8.3",
-    "uglifyify": "^5.0.2"
-  },
-  "dependencies": {
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
-    "emotion-theming": "^10.0.27",
-    "promise-polyfill": "^8.1.3",
-    "ramda": "^0.26.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "snarkdown": "^1.2.2",
-    "tinycolor2": "^1.4.1",
-    "whatwg-fetch": "^3.0.0"
-  }
+  "devDependencies": {},
+  "dependencies": {}
 }
