--- a/packages/showcase/package.json
+++ b/packages/showcase/package.json
@@ -24,10 +24,11 @@
     "uglifyify": "^5.0.2"
   },
   "dependencies": {
-    "@nlxchat/react": "^0.1.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@nlxchat/react": "^0.1.0",
     "emotion-theming": "^10.0.27",
+    "preact": "^10.5.4",
     "promise-polyfill": "^8.1.3",
     "ramda": "^0.26.1",
     "react": "^16.13.1",
