Add npmignore to packages

--- a/packages/showcase/package.json
+++ b/packages/showcase/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@nlxchat/showcase",
   "version": "0.1.0",
+  "private": true,
   "description": "SDK to talk to NLX bots",
   "main": "lib/index.js",
   "scripts": {
