--- a/packages/showcase/package.json
+++ b/packages/showcase/package.json
@@ -15,27 +15,17 @@
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "@types/tinycolor2": "^1.4.2",
-    "aliasify": "^2.1.0",
-    "browserify": "^16.5.1",
-    "lerna": "^3.22.1",
     "parcel": "^1.12.4",
     "prettier": "^1.19.1",
-    "tsify": "^4.0.1",
-    "typescript": "^3.8.3",
-    "uglifyify": "^5.0.2"
+    "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
     "@nlxchat/react": "^0.4.0",
-    "emotion-theming": "^10.0.27",
     "preact": "^10.5.4",
     "promise-polyfill": "^8.1.3",
-    "ramda": "^0.26.1",
+    "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "snarkdown": "^1.2.2",
-    "tinycolor2": "^1.4.1",
-    "whatwg-fetch": "^3.0.0"
+    "tinycolor2": "^1.4.1"
   }
 }
