--- a/packages/showcase/package.json
+++ b/packages/showcase/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nlxchat/showcase",
-  "version": "0.4.0",
+  "version": "0.4.1-alpha.0",
   "private": true,
   "description": "SDK to talk to NLX bots",
   "main": "lib/index.js",
@@ -21,7 +21,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@nlxchat/react": "^0.4.0",
+    "@nlxchat/react": "^0.4.1-alpha.0",
     "preact": "^10.5.4",
     "promise-polyfill": "^8.1.3",
     "ramda": "^0.27.1",
