--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nlxchat/widget",
-  "version": "0.4.0",
+  "version": "0.4.1-alpha.0",
   "description": "SDK to talk to NLX bots",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -28,8 +28,8 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
-    "@nlxchat/core": "^0.4.0",
-    "@nlxchat/react": "^0.4.0",
+    "@nlxchat/core": "^0.4.1-alpha.0",
+    "@nlxchat/react": "^0.4.1-alpha.0",
     "emotion-theming": "^10.0.27",
     "promise-polyfill": "^8.1.3",
     "ramda": "^0.26.1",
