--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,5 +25,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "gitHead": "2f1bd3e179cfb6bc88061e108667d3b49af13251"
 }
