--- a/packages/preact/package.json
+++ b/packages/preact/package.json
@@ -21,6 +21,9 @@
     "@nlxchat/core": "^0.4.1-alpha.1",
     "ramda": "^0.27.1"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "preact": "^10.5.4"
   },
