--- a/packages/showcase/package.json
+++ b/packages/showcase/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@nlxchat/showcase",
+  "private": true,
   "version": "0.4.1-alpha.1",
   "description": "SDK to talk to NLX bots",
   "main": "lib/index.js",
