--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,10 @@
 {
   "npmClient": "npm",
   "packages": [
-    "packages/*"
+    "packages/core",
+    "packages/react",
+    "packages/preact",
+    "packages/widget"
   ],
   "version": "0.4.1-alpha.1"
 }
