--- a/packages/preact/package.json
+++ b/packages/preact/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nlxchat/preact",
   "version": "0.4.1-alpha.2",
-  "description": "SDK to talk to NLX bots",
+  "description": "Preact hook wrapper for the NLX Chat SDK",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
