--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nlxchat/react",
   "version": "0.4.1-alpha.2",
-  "description": "SDK to talk to NLX bots",
+  "description": "React hook wrapper for the NLX Chat SDK",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
