--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nlxchat/widget",
   "version": "0.4.1-alpha.2",
-  "description": "SDK to talk to NLX bots",
+  "description": "Standalone chat widget based on the NLX Chat SDK",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
