--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nlxchat/react",
-  "version": "0.4.1-alpha.2",
+  "version": "0.4.1",
   "description": "React hook wrapper for the NLX Chat SDK",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -18,7 +18,7 @@
     "prettier": "^1.19.1"
   },
   "dependencies": {
-    "@nlxchat/core": "^0.4.1-alpha.2",
+    "@nlxchat/core": "^0.4.1",
     "ramda": "^0.27.1"
   },
   "peerDependencies": {
