--- a/packages/showcase/package.json
+++ b/packages/showcase/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nlxchat/showcase",
   "private": true,
-  "version": "0.4.1-alpha.1",
+  "version": "0.4.1",
   "description": "SDK to talk to NLX bots",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -21,7 +21,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@nlxchat/react": "^0.4.1-alpha.1",
+    "@nlxchat/react": "^0.4.1",
     "preact": "^10.5.4",
     "promise-polyfill": "^8.1.3",
     "ramda": "^0.27.1",
