--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "rm -rf lib && mkdir lib && tsc",
+    "build:standalone": "node bin/build.js",
+    "build": "rm -rf lib && mkdir lib && tsc && npm run build:standalone",
     "prepublish": "npm run build"
   },
   "author": "Peter Szerzo <peter@nlx.ai>",
@@ -32,9 +33,9 @@
     "@nlxchat/react": "^0.4.1",
     "emotion-theming": "^10.0.27",
     "promise-polyfill": "^8.1.3",
-    "ramda": "^0.26.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "ramda": "^0.26.1",
     "snarkdown": "^1.2.2",
     "tinycolor2": "^1.4.1",
     "whatwg-fetch": "^3.0.0"
