--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -33,12 +33,14 @@
     "@nlxchat/react": "^0.4.1",
     "emotion-theming": "^10.0.27",
     "promise-polyfill": "^8.1.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "ramda": "^0.26.1",
     "snarkdown": "^1.2.2",
     "tinycolor2": "^1.4.1",
     "whatwg-fetch": "^3.0.0"
+  },
+  "peerDependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "publishConfig": {
     "access": "public"
