--- a/packages/preact/package.json
+++ b/packages/preact/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {
     "@types/node": "^11.15.11",
     "@types/ramda": "^0.26.44",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "preact": "^10.5.4"
   },
   "dependencies": {
     "@nlxchat/core": "^0.4.1",
