--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -6,7 +6,7 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "build:standalone": "node bin/build.js",
-    "build": "rm -rf lib && mkdir lib && tsc && npm run build:standalone",
+    "build": "rm -rf lib && mkdir lib && tsc",
     "prepublish": "npm run build"
   },
   "author": "Peter Szerzo <peter@nlx.ai>",
