--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -15,7 +15,8 @@
     "@types/ramda": "^0.26.44",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "typescript": "^4.0.5"
   },
   "dependencies": {
     "@nlxchat/core": "^0.4.2",
