--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nlxchat/widget",
-  "version": "0.4.3",
+  "version": "0.5.0-alpha.0",
   "description": "Standalone chat widget based on the NLX Chat SDK",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -34,8 +34,8 @@
     "@emotion/core": "^10.0.28",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^10.0.27",
-    "@nlxchat/core": "^0.4.3",
-    "@nlxchat/react": "^0.4.3",
+    "@nlxchat/core": "^0.5.0-alpha.0",
+    "@nlxchat/react": "^0.5.0-alpha.0",
     "emotion-theming": "^10.0.27",
     "promise-polyfill": "^8.1.3",
     "ramda": "^0.26.1",
