--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "parcel serve -p 3000 src/example/index.html",
     "build:standalone": "node bin/build.js",
-    "build": "rm -rf lib && mkdir lib && tsc",
+    "build": "rm -rf lib && mkdir lib && tsc && npm run build:standalone",
     "prepublish": "npm run build"
   },
   "author": "Peter Szerzo <peter@nlx.ai>",
