--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,12 +11,14 @@
   "author": "Peter Szerzo <peter@nlx.ai>",
   "license": "MIT",
   "devDependencies": {
+    "@types/isomorphic-fetch": "^0.0.36",
     "@types/node": "^11.15.11",
     "@types/ramda": "^0.26.44",
     "prettier": "^1.19.1",
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "isomorphic-fetch": "^3.0.0",
     "ramda": "^0.27.1"
   },
   "publishConfig": {
