--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "dev": "parcel serve -p 3000 src/example/index.html",
+    "dev": "parcel serve -p 3000 src/example/*",
     "build:standalone": "node bin/build.js",
     "build": "rm -rf lib && mkdir lib && tsc && npm run build:standalone",
     "prepublish": "npm run build"
