--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "dev": "parcel serve -p 3000 src/example/*",
+    "dev": "parcel serve -p 3000 src/example/*.html",
     "build:standalone": "node bin/build.js",
     "build": "rm -rf lib && mkdir lib && tsc && npm run build:standalone",
     "prepublish": "npm run build"
@@ -19,7 +19,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/tinycolor2": "^1.4.2",
     "browserify": "^17.0.0",
-    "parcel": "^2.0.0",
+    "parcel": "^2.6.0",
     "prettier": "^1.19.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
