--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,13 +14,15 @@
     "@types/isomorphic-fetch": "^0.0.36",
     "@types/node": "^11.15.11",
     "@types/ramda": "^0.26.44",
+    "@types/uuid": "^8.3.4",
     "prettier": "^1.19.1",
     "typescript": "^4.0.5"
   },
   "dependencies": {
     "isomorphic-fetch": "^3.0.0",
     "ramda": "^0.27.1",
-    "reconnecting-websocket": "^4.4.0"
+    "reconnecting-websocket": "^4.4.0",
+    "uuid": "^8.3.2"
   },
   "publishConfig": {
     "access": "public"
