--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nlxchat/core",
-  "version": "0.5.6-alpha.4",
+  "version": "0.5.6",
   "description": "NLX Chat SDK core",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
