--- a/packages/preact/package.json
+++ b/packages/preact/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nlxchat/preact",
-  "version": "0.5.6",
+  "version": "1.0.0-alpha.0",
   "description": "Preact hook wrapper for the NLX Chat SDK",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -18,7 +18,7 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@nlxchat/core": "^0.5.6",
+    "@nlxchat/core": "^1.0.0-alpha.0",
     "ramda": "^0.27.1"
   },
   "publishConfig": {
