--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nlxchat/react",
-  "version": "0.5.6",
+  "version": "1.0.0-alpha.0",
   "description": "React hook wrapper for the NLX Chat SDK",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -19,7 +19,7 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@nlxchat/core": "^0.5.6",
+    "@nlxchat/core": "^1.0.0-alpha.0",
     "ramda": "^0.27.1"
   },
   "peerDependencies": {
