--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nlxchat/widget",
-  "version": "1.0.0-alpha.5",
+  "version": "1.0.0",
   "description": "Standalone chat widget based on the NLX Chat SDK",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -32,8 +32,8 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
-    "@nlxchat/core": "^1.0.0-alpha.5",
-    "@nlxchat/react": "^1.0.0-alpha.5",
+    "@nlxchat/core": "^1.0.0",
+    "@nlxchat/react": "^1.0.0",
     "promise-polyfill": "^8.1.3",
     "ramda": "^0.27.1",
     "snarkdown": "^1.2.2",
