--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -34,9 +34,10 @@
     "@emotion/styled": "^11.0.0",
     "@nlxchat/core": "^1.0.2",
     "@nlxchat/react": "^1.0.2",
+    "preact": "^10.11.3",
     "promise-polyfill": "^8.1.3",
     "ramda": "^0.27.1",
-    "snarkdown": "^1.2.2",
+    "snarkdown": "^2.0.0",
     "tinycolor2": "^1.4.1",
     "whatwg-fetch": "^3.0.0"
   },
