--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/tinycolor2": "^1.4.2",
     "browserify": "^17.0.0",
+    "common-shakeify": "^1.1.2",
     "parcel": "^2.6.0",
     "prettier": "^1.19.1",
     "react": "^17.0.2",
