--- a/packages/widget/tsconfig.json
+++ b/packages/widget/tsconfig.json
@@ -14,6 +14,7 @@
       "react-dom": ["./node_modules/preact/compat/"]
     },
     "strictNullChecks": true,
+    "strictPropertyInitialization": false,
     "esModuleInterop": true
   }
 }
