--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nlxchat/core",
-  "version": "1.0.16",
+  "version": "1.0.17-alpha.0",
   "description": "NLX Chat SDK core",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
