--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -19,6 +19,7 @@
   "author": "Peter Szerzo <peter@nlx.ai>",
   "license": "MIT",
   "devDependencies": {
+    "@types/marked": "^4.0.8",
     "@types/node": "^11.15.11",
     "@types/ramda": "^0.26.44",
     "@types/react": "^17.0.39",
@@ -41,9 +42,9 @@
     "@emotion/styled": "^11.0.0",
     "@nlxchat/core": "^1.0.17-alpha.0",
     "@nlxchat/react": "^1.0.17-alpha.0",
+    "marked": "^4.3.0",
     "promise-polyfill": "^8.1.3",
     "ramda": "^0.27.1",
-    "snarkdown": "^2.0.0",
     "tinycolor2": "^1.4.1",
     "whatwg-fetch": "^3.0.0"
   },
