--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "rm -rf lib && mkdir lib && tsc",
+    "build:standalone": "node bin/build.js",
+    "build": "rm -rf lib && mkdir lib && tsc && npm run build:standalone",
     "prepublish": "npm run build"
   },
   "author": "Peter Szerzo <peter@nlx.ai>",
@@ -15,8 +16,11 @@
     "@types/node": "^11.15.11",
     "@types/ramda": "^0.26.44",
     "@types/uuid": "^8.3.4",
+    "browserify": "^17.0.0",
     "prettier": "^1.19.1",
-    "typescript": "^4.9.5"
+    "tsify": "^5.0.4",
+    "typescript": "^4.9.5",
+    "uglifyify": "^5.0.2"
   },
   "dependencies": {
     "isomorphic-fetch": "^3.0.0",
