--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -26,7 +26,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/tinycolor2": "^1.4.2",
     "browserify": "^17.0.0",
-    "parcel": "^2.6.0",
+    "parcel": ">=2.9.3",
     "prettier": "^1.19.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
