--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -23,8 +23,8 @@
     "ramda": "^0.27.1"
   },
   "peerDependencies": {
-    "react": ">=17.0.0",
-    "react-dom": ">=17.0.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "publishConfig": {
     "access": "public"
