--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "postinstall": "npm run build",
     "build": "lerna run build",
-    "publish": "rm -f packages/*/package-lock.json && lerna publish"
+    "publish": "rm -f package-lock.json && rm -f packages/*/package-lock.json && lerna publish"
   },
   "author": "Peter Szerzo <peter@nlx.ai>",
   "license": "MIT",
