--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "dev": "parcel serve -p 8081",
     "build:website": "parcel build --public-url ./",
-    "build:standalone": "node bin/build.js",
-    "build": "rm -rf lib && mkdir lib && tsc && npm run build:standalone",
+    "build:umd": "node bin/build.js",
+    "build": "rm -rf lib && mkdir lib && tsc && npm run build:umd",
     "prepublish": "npm run build"
   },
   "targets": {
