Set up website dev environment

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,21 +1,24 @@
 {
   "name": "@nlxchat/website",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "2.0.0-beta.1",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build"
   },
   "dependencies": {
-    "@nlxchat/core": "^2.0.0-alpha.13",
-    "@nlxchat/widget": "^2.0.0-alpha.13",
+    "@nlxchat/core": "^2.0.0-beta.1",
+    "@nlxchat/react": "^2.0.0-beta.1",
+    "@nlxchat/widget": "^2.0.0-beta.1",
+    "htm": "^3.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tinycolor2": "^1.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/tinycolor2": "^1.4.2",
     "@vitejs/plugin-react": "^4.0.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
