--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,8 @@
     "packages/core",
     "packages/react",
     "packages/preact",
-    "packages/widget"
+    "packages/widget",
+    "packages/website"
   ],
   "version": "2.0.0-beta.1"
 }
