--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -1,25 +1,17 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
-    "skipLibCheck": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-
-    /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "outDir": "./lib",
+    "module": "es2020",
+    "moduleResolution": "node",
+    "target": "es5",
+    "skipLibCheck": true,
+    "declaration": true,
+    "rootDir": "./src",
+    "esModuleInterop": true,
+    "types": ["vite/client"],
+    "lib": ["dom", "es2017"],
+    "jsx": "react"
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src/**/*"]
 }
