--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -20,6 +20,9 @@
     "@types/react-dom": "^18.2.7",
     "@types/tinycolor2": "^1.4.2",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
