--- a/packages/chat-core/package.json
+++ b/packages/chat-core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nlxchat/core",
-  "version": "2.0.0-beta.2",
+  "name": "@nlx/chat-core",
+  "version": "0.0.1",
   "description": "NLX Chat SDK core",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "isomorphic-fetch": "^3.0.0",
-    "ramda": "^0.27.1",
+    "ramda": "^0.29.1",
     "reconnecting-websocket": "^4.4.0",
     "uuid": "^8.3.2"
   },
