--- a/packages/chat-react/package.json
+++ b/packages/chat-react/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nlxchat/react",
-  "version": "2.0.0-beta.2",
+  "name": "@nlx/chat-react",
+  "version": "0.0.1",
   "description": "React hook wrapper for the NLX Chat SDK",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -19,8 +19,8 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@nlxchat/core": "^2.0.0-beta.2",
-    "ramda": "^0.27.1"
+    "@nlx/chat-core": "^0.0.1",
+    "ramda": "^0.29.1"
   },
   "peerDependencies": {
     "react": "^18.2.0",
