--- a/packages/chat-widget/package.json
+++ b/packages/chat-widget/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nlxchat/widget",
-  "version": "2.0.0-beta.2",
+  "name": "@nlx/chat-widget",
+  "version": "0.0.1",
   "description": "Standalone chat widget based on the NLX Chat SDK",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -12,7 +12,6 @@
   "author": "Peter Szerzo <peter@nlx.ai>",
   "license": "MIT",
   "devDependencies": {
-    "@types/marked": "^4.0.8",
     "@types/node": "^11.15.11",
     "@types/ramda": "^0.26.44",
     "@types/react": "^18.2.21",
@@ -31,11 +30,11 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
-    "@nlxchat/core": "^2.0.0-beta.2",
-    "@nlxchat/react": "^2.0.0-beta.2",
-    "marked": "^4.3.0",
+    "@nlx/chat-core": "^0.0.1",
+    "@nlx/chat-react": "^0.0.1",
+    "marked": "^9.1.3",
     "promise-polyfill": "^8.1.3",
-    "ramda": "^0.27.1",
+    "ramda": "^0.29.1",
     "tinycolor2": "^1.4.1",
     "whatwg-fetch": "^3.0.0"
   },
