--- a/packages/chat-react/package.json
+++ b/packages/chat-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nlx/chat-react",
+  "name": "@nlxai/chat-react",
   "version": "0.0.1",
   "description": "React hook wrapper for the NLX Chat SDK",
   "main": "lib/index.js",
@@ -19,7 +19,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@nlx/chat-core": "^0.0.1",
+    "@nlxai/chat-core": "^0.0.1",
     "ramda": "^0.29.1"
   },
   "peerDependencies": {
