--- a/packages/chat-widget/package.json
+++ b/packages/chat-widget/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nlx/chat-widget",
+  "name": "@nlxai/chat-widget",
   "version": "0.0.1",
   "description": "Standalone chat widget based on the NLX Chat SDK",
   "main": "lib/index.js",
@@ -30,8 +30,8 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
-    "@nlx/chat-core": "^0.0.1",
-    "@nlx/chat-react": "^0.0.1",
+    "@nlxai/chat-core": "^0.0.1",
+    "@nlxai/chat-react": "^0.0.1",
     "marked": "^9.1.3",
     "promise-polyfill": "^8.1.3",
     "ramda": "^0.29.1",
