--- a/packages/chat-widget/package.json
+++ b/packages/chat-widget/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nlxai/chat-widget",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "Standalone chat widget based on the NLX Chat SDK",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -30,11 +30,12 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
-    "@nlxai/chat-core": "^0.0.1",
-    "@nlxai/chat-react": "^0.0.1",
+    "@nlxai/chat-core": "^0.0.0",
+    "@nlxai/chat-react": "^0.0.0",
     "marked": "^9.1.3",
     "promise-polyfill": "^8.1.3",
     "ramda": "^0.29.1",
+    "react-syntax-highlighter": "^15.5.0",
     "tinycolor2": "^1.4.1",
     "whatwg-fetch": "^3.0.0"
   },
