--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,15 +1,17 @@
 {
   "name": "@nlxai/website",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build"
   },
   "dependencies": {
-    "@nlxai/chat-core": "^0.0.1",
-    "@nlxai/chat-react": "^0.0.1",
-    "@nlxai/chat-widget": "^0.0.1",
+    "@nlxai/chat-core": "^0.0.0",
+    "@nlxai/chat-react": "^0.0.0",
+    "@nlxai/chat-widget": "^0.0.0",
+    "@react-hookz/web": "^23.1.0",
+    "fuse.js": "^7.0.0",
     "htm": "^3.1.1",
     "ramda": "^0.29.1",
     "react": "^18.2.0",
@@ -23,6 +25,7 @@
     "@types/ramda": "^0.29.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-syntax-highlighter": "^15.5.10",
     "@types/tinycolor2": "^1.4.2",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
