--- a/packages/chat-preact/package.json
+++ b/packages/chat-preact/package.json
@@ -2,18 +2,28 @@
   "name": "@nlxai/chat-preact",
   "version": "0.0.3",
   "description": "Preact hook wrapper for the NLX Chat SDK",
-  "main": "lib/index.js",
+  "type": "module",
+  "main": "lib/index.cjs.js",
+  "module": "lib/index.esm.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "rm -rf lib && mkdir lib && tsc",
+    "build": "rollup -c",
     "prepublish": "npm run build"
   },
   "author": "Peter Szerzo <peter@nlx.ai>",
   "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-replace": "^5.0.5",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@types/node": "^11.15.11",
-    "@types/ramda": "^0.26.44",
+    "@types/ramda": "^0.29.8",
     "prettier": "^3.0.3",
+    "rollup": "^4.3.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
@@ -26,5 +36,5 @@
   "peerDependencies": {
     "preact": "^10.18.1"
   },
-  "gitHead": "09938fc29f852edd946809ddf3240ed7130d13aa"
+  "gitHead": "8fd47dbf863057e6581713decd9e3bd1cf7a41f0"
 }
