--- a/packages/chat-widget/package.json
+++ b/packages/chat-widget/package.json
@@ -2,28 +2,35 @@
   "name": "@nlxai/chat-widget",
   "version": "0.0.3",
   "description": "Standalone chat widget based on the NLX Chat SDK",
-  "main": "lib/index.js",
+  "type": "module",
+  "main": "lib/index.cjs.js",
+  "module": "lib/index.esm.js",
+  "browser": "lib/index.umd.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build:umd": "node bin/build.js",
-    "build": "rm -rf lib && mkdir lib && tsc && npm run build:umd",
+    "build": "rollup -c",
     "prepublish": "npm run build"
   },
   "author": "Peter Szerzo <peter@nlx.ai>",
   "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-replace": "^5.0.5",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@types/node": "^11.15.11",
     "@types/ramda": "^0.26.44",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/tinycolor2": "^1.4.2",
-    "browserify": "^17.0.0",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tsify": "^5.0.4",
-    "typescript": "^5.2.2",
-    "uglifyify": "^5.0.2"
+    "rollup": "^4.3.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "@emotion/cache": "^11.1.3",
@@ -32,7 +39,7 @@
     "@emotion/styled": "^11.0.0",
     "@nlxai/chat-core": "^0.0.3",
     "@nlxai/chat-react": "^0.0.3",
-    "marked": "^6.0.0",
+    "marked": "^9.1.6",
     "promise-polyfill": "^8.1.3",
     "ramda": "^0.29.1",
     "react-syntax-highlighter": "^15.5.0",
@@ -46,5 +53,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "09938fc29f852edd946809ddf3240ed7130d13aa"
+  "gitHead": "8fd47dbf863057e6581713decd9e3bd1cf7a41f0"
 }
