--- a/packages/chat-widget/tsconfig.json
+++ b/packages/chat-widget/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "es6",
     "lib": ["dom"],
     "jsx": "react",
     "skipLibCheck": true,
